src/main/java/com/pidanic/saral/grammar/Saral.g4
//header
grammar Saral;

//parser rules
compilationUnit : statement* EOF; //root rule - globally code consist only of variables and prints (see definition below)
statement : (print | variable);
variable : VARIABLE TYPE ID EQUALS value; //requires VAR token followed by ID token followed by EQUALS TOKEN ...
print : PRINT ID ; //print statement must consist of 'print' keyword and ID
value : NUMBER
      | STRING ; //must be NUMBER or STRING value (defined below)
TYPE : STRING_T
     | INT_T;

//lexer rules (tokens)
INT_T : 'neskutočné numeralio';
STRING_T : 'slovo';
VARIABLE : 'meňak' ; //VARIABLE TOKEN must match exactly 'var'
PRINT : 'ciskaj' ;
EQUALS : '=' ; //must be '='
NUMBER : [0-9]+ ; //must consist only of digits
STRING : '"'.*'"' ; //must be anything in qutoes
ID : [a-zA-Z0-9ľščťžýáíéäúôóďĺĽŠČŤŽÝÁÍÉÄÚÔÓĎĹ]+ ; //must be any alphanumeric value
WS: [ \t\n\r]+ -> skip ; //special TOKEN for skipping whitespaces
